cluster/apps/paulynomial-index/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paulynomial-index
  namespace: paulynomial-index
  labels:
    app: paulynomial-index
spec:
  replicas: 2
  selector:
    matchLabels:
      app: paulynomial-index
  template:
    metadata:
      labels:
        app: paulynomial-index
    spec:
      containers:
        - name: paulynomial-index
          image: ghcr.io/paulkiernan/paulynomial-index:2.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
