cluster/apps/paulynomial-index/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: paulynomial-index
  namespace: paulynomial-index
spec:
  selector:
    app: paulynomial-index
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
